tests/support/validation/invalid/stop_on_timepoint_different_from_nde/pattern.pat
PAT;  350;035040080;Outbound  ; 5;3502    ;1;4       ;North Burlington - Alewife Station
TPS;141     ;nubn  ;3502    ;1;
